--- a/App/Admin/View/Login/index.html
+++ b/App/Admin/View/Login/index.html
@@ -10,7 +10,7 @@ body{background-image:url(/public/admin/images/adminbg.jpg);background-size:cove
 </head>
 <body>
 <div class="admin_login_wrap">
-    <h1>后台登录</h1>
+    <h1 style="text-align: center;font-size: 28px;">后台登录</h1>
     <div class="adming_login_border">
         <div class="admin_input">
             <form action="{:U('Login/checkLogin')}" method="post">
