--- a/App/Admin/View/Public/left.html
+++ b/App/Admin/View/Public/left.html
@@ -73,34 +73,44 @@
                 </li>
                 </notempty>
 
-                <notempty name='withdraw_nav'>
+                <notempty name='job_nav'>
                 <li>
-                    <a href="#"><i class="iconfont">&#xe6c8;</i><span class="fsize">提现管理</span></a>
+                    <a href="#"><i class="iconfont">&#xe6c8;</i><span class="fsize">工作管理</span></a>
                      <ul class="sub-menu">
-                        <volist name='withdraw_nav' id='vo'>
+                        <volist name='job_nav' id='vo'>
                             <li><a href="{$vo.nav_url}#2#{$key}"><i class="iconfont">{$vo.nav_e}</i>&nbsp;{$vo.nav_name}</a></li>
                         </volist>
                     </ul>
                 </li>
                </notempty>
 
-                <notempty name='trade_nav'>
+                <notempty name='train_nav'>
                     <li>
-                        <a href="#"><i class="iconfont">&#xe631;</i><span class="fsize">交易管理</span></a>
+                        <a href="#"><i class="iconfont">&#xe631;</i><span class="fsize">培训管理</span></a>
                         <ul class="sub-menu">
-                            <volist name='trade_nav' id='vo'>
+                            <volist name='train_nav' id='vo'>
                                 <li><a href="{$vo.nav_url}#3#{$key}"><i class="iconfont">{$vo.nav_e}</i>&nbsp;{$vo.nav_name}</a></li>
                             </volist>
                         </ul>
                     </li>
                 </notempty>
 
-                <notempty name='pubtask_nav'>
+                <notempty name='company_nav'>
                     <li>
-                        <a href="#"><i class="iconfont">&#xe6f7;</i><span class="fsize">任务管理</span></a>
+                        <a href="#"><i class="iconfont">&#xe6f7;</i><span class="fsize">公司管理</span></a>
                         <ul class="sub-menu">
-                            <volist name='pubtask_nav' id='vo'>
-                                <li><a href="{$vo.nav_url}#6#{$key}"><i class="iconfont">{$vo.nav_e}</i>&nbsp;{$vo.nav_name}</a></li>
+                            <volist name='company_nav' id='vo'>
+                                <li><a href="{$vo.nav_url}#4#{$key}"><i class="iconfont">{$vo.nav_e}</i>&nbsp;{$vo.nav_name}</a></li>
+                            </volist>
+                        </ul>
+                    </li>
+                </notempty>
+                <notempty name='userop_nav'>
+                    <li>
+                        <a href="#"><i class="iconfont">&#xe6f7;</i><span class="fsize">用户预约/培训记录</span></a>
+                        <ul class="sub-menu">
+                            <volist name='userop_nav' id='vo'>
+                                <li><a href="{$vo.nav_url}#5#{$key}"><i class="iconfont">{$vo.nav_e}</i>&nbsp;{$vo.nav_name}</a></li>
                             </volist>
                         </ul>
                     </li>
@@ -110,7 +120,7 @@
                         <a href="#"><i class="iconfont">&#xe64d;</i><span class="fsize">管理员管理</span></a>
                         <ul class="sub-menu">
                             <volist name='admin_nav' id='vo'>
-                                <li><a href="{$vo.nav_url}#4#{$key}"><i class="iconfont">{$vo.nav_e}</i>&nbsp;{$vo.nav_name}</a></li>
+                                <li><a href="{$vo.nav_url}#6#{$key}"><i class="iconfont">{$vo.nav_e}</i>&nbsp;{$vo.nav_name}</a></li>
                             </volist>
                         </ul>
                     </li>
