--- a/App/Admin/View/Job/index.html
+++ b/App/Admin/View/Job/index.html
@@ -4,7 +4,12 @@
 <div class="main-wrap">
 
     <div class="crumb-wrap">
-        <div class="crumb-list"><i class="icon-font"></i><a href="{:U('Index/index')}">首页</a><span class="crumb-step">&gt;</span><span class="crumb-name">任务列表</span></div>
+        <div class="crumb-list">
+            <i class="icon-font"></i>
+            <a href="{:U('Index/index')}">首页</a>
+            <span class="crumb-step">&gt;</span>
+            <span class="crumb-name">工作类型管理</span>
+        </div>
     </div>
     <div class="search-wrap">
 
@@ -13,32 +18,33 @@
 
         <div class="result-title">
             <div class="result-list">
-                <a href="{:U('PubTask/add')}#6#0"><i class="icon-font"></i>新增发布任务</a>
+                <a href="{:U('Job/job_add')}#2#0"><i class="icon-font"></i>新增类型</a>
             </div>
+            <form action="{:U('Job/index')}" method="get">
+                <table class="search-tab">
+                    <tr>
+                        <td width="50">名称:</td>
+                        <td><input class="common-text" placeholder="名称" name="string" type="text" value="{$_GET['string']}"></td>
+                        <td><input class="btn btn-primary btn2"  value="查询" type="submit"></td>
+                    </tr>
+                </table>
+            </form>
         </div>
         <div class="result-content">
             <table class="result-tab" width="100%">
                 <tr>
 
                     <th>ID</th>
-                    <th>发布任务标题</th>
-                    <th>简介</th>
-                    <th>任务logo</th>
-                    <th>酬金</th>
-                    <th>排序</th>
+                    <th>工作类型名称</th>
                     <th>状态</th>
+                    <th>操作人</th>
+                    <th>创建时间</th>
                     <th>操作</th>
                 </tr>
                 <volist name='info' id='vo'>
                     <tr>
-                        <td>{$vo['id']}</td>
-                        <td>{$vo['title']}</td>
-                        <td>{$vo['introduce']}</td>
-                        <td>
-                            <img src="{$vo['logo_img']}" style="height: 80px;width: 80px" alt="">
-                        </td>
-                        <td>{$vo['reward']}</td>
-                        <td>{$vo['sort']}</td>
+                        <td>{$vo['type_id']}</td>
+                        <td>{$vo['type_name']}</td>
                         <td><if condition="$vo['status'] eq 1">
                                 开启
                             </if>
@@ -46,9 +52,11 @@
                                 关闭
                             </if>
                         </td>
+                        <td>{$vo['op_man']}</td>
+                        <td>{$vo['op_time'] | date="Y-m-d H:i:s",###}</td>
                         <td>
-                            <a class="link-update" href="{:U('PubTask/save#6#0',array('id'=>$vo['id']))}#13#0">修改|</a>
-                            <a href="javascript:void(0)" class="link-del" onclick="cexiao({$vo.id})">删除</a>
+                            <a class="link-update" href="{:U('Job/job_add#2#0',array('id'=>$vo['type_id']))}#13#0">修改|</a>
+                            <a href="javascript:void(0)" class="link-del" onclick="cexiao({$vo.type_id})">删除</a>
                         </td>
                     </tr>
                 </volist>
@@ -64,14 +72,14 @@
 </body>
 </html>
 <script>
-    function cexiao(_this){
+    function cexiao(type_id){
         layer.confirm('确定删除吗？', {
             btn: ['确定','取消'], //按钮
             title: '撤销删除'
         }, function(){
-            $.post('{:U('PubTask/del')}',{id:_this},function(data){
+            $.post("{:U('Job/del')}",{id:type_id,model:'job_type'},function(data){
                 if(data['status'] == 1){
-                    layer.msg(data['info']);
+                    layer.msg(data['info'],{icon:1});
                     setTimeout(function(){location.reload();},1000);
                 }else{
                     layer.msg(data['info']);
