--- a/App/Admin/View/Public/left.html
+++ b/App/Admin/View/Public/left.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="__PUBLIC__/Admin/js/libs/modernizr.min.js"></script>
 	<script type="text/javascript" src="__PUBLIC__/Admin/js/jquery-1.7.2.min.js"></script>
     <script type="text/javascript" src="/Public/plugin/Js/layer/layer.min.js"></script>
-    <script type="text/javascript" src="/Public/plugin/Js/laydate/laydate.js"></script>
+    <!--<script type="text/javascript" src="/Public/plugin/Js/laydate/laydate.js"></script>-->
 <style>
 .iconfont{ padding-right:5px;}
 .fsize{ font-size:15px;}
@@ -125,27 +125,6 @@
                         </ul>
                     </li>
                 </notempty>
-                <!--<notempty name='tongji_nav'>-->
-                    <!--<li>-->
-                        <!--<a href="#"><i class="iconfont">&#xe64d;</i><span class="fsize">统计</span></a>-->
-                        <!--<ul class="sub-menu">-->
-                            <!--<volist name='tongji_nav' id='vo'>-->
-                                <!--<li><a href="{$vo.nav_url}#5#{$key}"><i class="iconfont">{$vo.nav_e}</i>&nbsp;{$vo.nav_name}</a></li>-->
-                            <!--</volist>-->
-                        <!--</ul>-->
-                    <!--</li>-->
-                <!--</notempty>-->
-
-                <!--<notempty name='transfer_nav'>-->
-                    <!--<li>-->
-                        <!--<a href="#"><i class="iconfont">&#xe6f7;</i><span class="fsize">转账管理</span></a>-->
-                        <!--<ul class="sub-menu">-->
-                            <!--<volist name='transfer_nav' id='vo'>-->
-                                <!--<li><a href="{$vo.nav_url}#7#{$key}"><i class="iconfont">{$vo.nav_e}</i>&nbsp;{$vo.nav_name}</a></li>-->
-                            <!--</volist>-->
-                        <!--</ul>-->
-                    <!--</li>-->
-                <!--</notempty>-->
             </ul>
         </div>
     </div>
