--- a/App/Admin/View/Record/apply_task.html
+++ b/App/Admin/View/Record/apply_task.html
@@ -8,7 +8,7 @@
             <i class="icon-font"></i>
             <a href="{:U('Index/index')}">首页</a>
             <span class="crumb-step">&gt;</span>
-            <span class="crumb-name">预约阿姨</span>
+            <span class="crumb-name">我要应聘</span>
         </div>
     </div>
     <div class="search-wrap">
@@ -20,7 +20,7 @@
             <!--<div class="result-list">-->
                 <!--<a href="{:U('Job/job_add')}#2#0"><i class="icon-font"></i>新增类型</a>-->
             <!--</div>-->
-            <form action="{:U('Record/order_ayi')}" method="get">
+            <form action="{:U('Record/apply_task')}" method="get">
                 <table class="search-tab">
                     <tr>
                         <td width="50">姓名:</td>
@@ -37,7 +37,7 @@
                     <th>ID</th>
                     <th>姓名</th>
                     <th>手机号码</th>
-                    <th>意向课程</th>
+                    <th>高单标题</th>
                     <th>提交时间</th>
                 </tr>
                 <volist name='info' id='vo'>
@@ -45,7 +45,7 @@
                         <td>{$vo['id']}</td>
                         <td>{$vo['name']}</td>
                         <td>{$vo['phone']}</td>
-                        <td>{$vo['jober_id']}</td>
+                        <td>{$vo['task_id']}</td>
                         <td>{$vo['create_time'] | date="Y-m-d H:i:s",###}</td>
                     </tr>
                 </volist>
