--- a/App/Admin/View/Job/ayi_add.html
+++ b/App/Admin/View/Job/ayi_add.html
@@ -46,6 +46,10 @@
                                 <td><input id="name" name="name" value="{$info.name}" type="text"  class="common-text"></td>
                             </tr>
                             <tr>
+                                <th><i class="require-red">*</i>出生年份：</th>
+                                <td><input id="birth" name="birth" value="{$info.birth}" type="text" placeholder="例如：1970年"  class="common-text"></td>
+                            </tr>
+                            <tr>
                                 <th><i class="require-red">*</i>头像：</th>
                                 <td><input id="head_img" name="head_img" value="" type="file"  class="common-text">
                                     <img src="{$info.head_img}" style="height: 100px;width: 100px" alt="">
