--- a/App/Admin/View/Train/course_add.html
+++ b/App/Admin/View/Train/course_add.html
@@ -39,7 +39,7 @@
                             <td><input id="course_img" name="course_img" value="{$info.course_img}" type="file"  class="common-text">
                                 <img src="{$info.course_img}" style="width: 100px;height: 100px" alt="">
                             </td>
-                            <input type="hidden" name="img1" value="{$info.course_img1}">
+                            <input type="hidden" name="course_img1" value="{$info.course_img}">
                         </tr>
                         <tr>
                             <th><i class="require-red">*</i>介绍：</th>
