--- a/App/Admin/View/Config/updateCofig.html
+++ b/App/Admin/View/Config/updateCofig.html
@@ -33,11 +33,11 @@
                         <tbody>
                         <tr>
                             <th><i class="require-red">*</i>标题：</th>
-                            <td><input id="title" name="title" type="text" <if condition="$info['name']">readonly</if>   value="{$info.name}"  class="common-text">(编辑不可修改)</td>)
+                            <td><input id="title" name="title" type="text"    value="{$info.name}"  class="common-text"></td>
                         </tr>
                         <tr>
                             <th><i class="require-red">*</i>英文字段名：</th>
-                            <td><input id="en_name" name="en_name" type="text" <if condition="$info['key']">readonly</if>  readonly value="{$info.key}"  class="common-text">(编辑不可修改)</td>
+                            <td><input id="en_name" name="en_name" type="text" <if condition="$info['key']">readonly</if>   value="{$info.key}"  class="common-text">(编辑不可修改)</td>
                         </tr>
                         <tr>
                             <th><i class="require-red">*</i>类型：</th>
