--- a/App/Admin/View/Record/apply_task.html
+++ b/App/Admin/View/Record/apply_task.html
@@ -45,7 +45,7 @@
                         <td>{$vo['id']}</td>
                         <td>{$vo['name']}</td>
                         <td>{$vo['phone']}</td>
-                        <td>{$vo['task_id']}</td>
+                        <td>{$vo['task_name']}</td>
                         <td>{$vo['create_time'] | date="Y-m-d H:i:s",###}</td>
                     </tr>
                 </volist>
